--- a/css/styles.css
+++ b/css/styles.css
@@ -442,6 +442,10 @@ hr {
 }
 
 @media (max-width: 845px) {
+  .parallax {
+    background-attachment: unset;
+  }
+  
   #slide-out {
     display: block;
   }
