--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body {
   width: 100%;
   max-width: 1460px;
   box-sizing: border-box;
-  z-index: 2;
+  z-index: 3;
 }
 
 .navbar a#logo{
@@ -150,12 +150,14 @@ hr {
 .overlay {
   background-image: url('../assets/pixel.png');
   background-color: rgba(34, 34, 34, 0.2);
-  position: absolute;
+  position: relative;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   transition: all .5s ease;
+  z-index: 2;
 }
 
 /* .overlay:hover {
