--- a/css/styles.css
+++ b/css/styles.css
@@ -128,17 +128,20 @@ hr {
 #intro h1 {
   color: #fff;
   letter-spacing: 2px;
-  font-size: 20px;
-  top: 20%;
-  padding: 30px;
-  border: 2px solid #fff;
-  width: 270px;
+  font-size: 14px;
+  padding: 20px;
+  border: 1px solid #fff;
+  width: 200px;
   margin: 0 auto;
   display: block;
-  position: relative;
+  position: absolute;
   border-radius: 2px;
   font-weight: 600;
-  text-align: left;
+  text-align: center;
+  bottom: 170px;
+  left: 0;
+  right: 0;
+  z-index: 2;
 }
 
 #intro img {
