--- a/css/movie.css
+++ b/css/movie.css
@@ -32,7 +32,7 @@
 
 .movie-wrapper .description-side {
   box-sizing: border-box;
-  flex: 0 65%;
+  flex: 0 60%;
   margin: 0 0 0 30px;
 }
 
@@ -68,4 +68,14 @@
 .movie-wrapper .film-card .poster-wrapper img {
   height: auto;
   height: auto;
+}
+
+@media (max-width: 845px) {
+  .movie-wrapper .poster-side {
+    flex: 0 100%;
+  }
+
+  .movie-wrapper .description-side {
+    flex: 0 100%;
+  }
 }
