--- a/css/styles.css
+++ b/css/styles.css
@@ -221,11 +221,18 @@ hr {
 }
 
 .film-card h2 {
+  color: #333;
   font-size: 14px;
 }
 
 .film-card .description {
+  color: #555;
   padding: 20px;
+}
+
+.film-card .description a {
+  color: #333;
+  text-decoration: none;
 }
 
 .film-card .description h2 {
@@ -238,19 +245,15 @@ hr {
 }
 
 #distribution-description,
-#about {
-  max-width: 768px;
-  margin: 0 auto;
-}
-
-#distribution-description,
-#about p,
+#about,
 #contacts {
   text-align: center;
   font-size: 18px;
   line-height: 24px;
-  color: #222;
+  color: #555;
   padding: 0 20px;
+  max-width: 768px;
+  margin: 0 auto;
 }
 
 #distribution {
@@ -298,7 +301,7 @@ hr {
   display: block;
   width: 100%;
   text-align: left;
-  color: #222;
+  color: #333;
   font-weight: 300;
   line-height: 20px;
 }
