--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,7 @@ body {
 }
 
 .parallax {
-  /* background-image: url('../assets/intro.jpg'); */
-  background-image: url('../assets/mixed.jpg');
+  background-image: url('../assets/intro.jpg');
   height: 100%;
   background-attachment: fixed;
   background-position: center;
