--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ hr {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
   height: 361px;
-  object-fit: cover;
+  /* object-fit: cover; */
   background-color: #d2d2d2;
   box-shadow: 0 0.005em 0.01em 0 rgba(0,0,0,.12), 0 2px 10px 0 rgba(0,0,0,.12);
 }
